--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="js/script.js" defer></script>
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <h1></h1><img src="imagens/logo.png" alt="Pets Loves"></h1>
 
         <p class="sacola">Nenhum item na sacola de compras</p>
 
         <nav>
-            <ul id="menu-opcoes">
+            <ul class="menu-opcoes">
                 <li><a href="#">Sua conta</a></li>
                 <li><a href="#">Lista de desejos</a></li>
                 <li><a href="#">Cartão fidelidade</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="#">Ajuda</a></li>
             </ul>
         </nav>
