--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
     <header class="container">
-        <h1></h1><img src="imagens/logo.png" alt="Pets Loves"></h1>
+        <h1><img src="imagens/logo.png" alt="Pets Loves"></h1>
 
         <p class="sacola">Nenhum item na sacola de compras</p>
 
-        <nav>
-            <ul class="menu-opcoes">
+        <nav class="menu-opcoes">
+            <ul>
                 <li><a href="#">Sua conta</a></li>
                 <li><a href="#">Lista de desejos</a></li>
-                <li><a href="#">Cartão fidelidade</a></li>
+                <li><a href="#">Serviços</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
